# mood2music

./: .gitignore  README.md  pyproject.toml
public/: index.html  style.css
src/: agent.py  cli.py  config.py  music_suggester.py  server.py  spotify_client.py
src/prompts/: system.md
